# Hybrid-Chess

./: .gitignore  README.md  RULES.md  pyproject.toml  requirements.txt  summary.md
course_project/: plot_figures.R
cpp/: build.ps1  build.sh
docs/: ARCHITECTURE.md  EXPERIMENTS.md  EXPERIMENTS_EN.md  EXPERIMENTS_ZH.md  game_rules.md  game_spec_v2.md  methodology.md  timeline.md
examples/: custom_variant.py
hybrid/: __init__.py  __main__.py  gym_env.py  server.py
notebooks/: 01_game_rules_and_env.ipynb  02_search_algorithms.ipynb  03_mcts_explained.ipynb  04_alphazero_training.ipynb  05_experiments.ipynb
scripts/: _fix_encoding.py  ab_tournament.py  ablation_analysis.py  action_mask_check.py  add_stats.py  alpha_sweep.py  analyze_experiment.py  analyze_games.py  analyze_topology.py  az_dashboard.py  bootstrap_alpha_rank.py  bootstrap_nonparametric.py  cross_variant_tournament.py  diagnose_draws.py  diagnose_endgame.py  diagnose_sanity.py  egta_tournament.py  egta_tournament_fast.py  eval_arena.py  eval_az_vs_ab.py  eval_champions.py  gate_az_checkpoints.py  gate_baselines.py  gate_deep_ab.py  gate_early_az.py  generate_experiment_docs.py  generate_ui_game.py  launch_3variants.py  launch_az_palace_knight.py  mcts_sanity_check.py  monitor_experiment.py  monitor_tournament.py  monitor_training.py  multi_seed_pipeline.py  overfit_micro.py  play_match.py  profile_mcts.py  profile_server_path.py  rq4_ab_full_ablation.py  rq4_balance_refine.py  (+14 more)
tests/: fuzz_dual_engine.py  test_ab_cpp.py  test_az_encoding.py  test_az_inference_server.py  test_az_replay.py  (+15 more)
(+58 files in other folders)
