[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hybrid-chess"
version = "0.1.0"
description = "Asymmetric board game engine: International Chess vs Chinese Chess with AlphaZero RL training"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "lessen-xu" }]
keywords = ["chess", "xiangqi", "reinforcement-learning", "alphazero", "game-ai", "mcts"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Games/Entertainment :: Board Games",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
    "tqdm>=4.60",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "scipy>=1.10",
    "pybind11>=2.11",
]
gym = [
    "gymnasium>=0.29",
]

[project.scripts]
hybrid-chess = "hybrid.__main__:main"

[project.urls]
Homepage = "https://github.com/lessen-xu/Hybrid-Chess"
Repository = "https://github.com/lessen-xu/Hybrid-Chess"
Issues = "https://github.com/lessen-xu/Hybrid-Chess/issues"

[tool.hatch.build.targets.wheel]
packages = ["hybrid"]

[tool.pytest.ini_options]
testpaths = ["tests"]
